crates/zenith/tests/snapshots/screens__opening_not_on_path__80x24__high-contrast.snap
---
source: crates/zenith/tests/screens.rs
expression: "screen(&draw(&script.app, width, height))"
---
                                   *   *                            ·

       ∙
         **        ▄▄██  ██▄▄      ZENITH
 •   ∙·          ▄█████  █████▄    The terminal of Constellation
  ·             ▄██████████████▄   NIPS-CERN
                ████████████████   0.2.0                                ∙    *
                                                                   ·
∙                                                                       •
                             Not connected to SOLAR

    ┌──────────────────────────────────────────────────────────────────────┐
    │ ZENITH could not find solar on the PATH, which has 23 directories.   │
    │ Put the folder that holds solar on the PATH, SOLAR's target/release  │
    │ when it was built from source, or give the path with --solar <path>  │
    │ or the variable ZENITH_SOLAR.                                        │
*   │                                                                      │
    │ r try again   Enter go to the tabs   q quit                          │
    └──────────────────────────────────────────────────────────────────────┘


                       •                                           •
       *            •          •
                                 *        *·   ∙
--- every cell not listed is #F5F1E8 on #0B0C14
 3: 16-31  #FFC23D on #0B0C14
 3: 35-40  #FFC23D on #0B0C14 bold
 4: 16-31  #FFC23D on #0B0C14
 5: 16-31  #FFC23D on #0B0C14
 6: 16-31  #FFC23D on #0B0C14
 9: 29-50  #FFC23D on #0B0C14 bold
12:  6-71  #FFC23D on #0B0C14 bold
17:  6-6   #FFC23D on #0B0C14 bold
17: 20-24  #FFC23D on #0B0C14 bold
17: 43-43  #FFC23D on #0B0C14 bold
