crates/zenith/tests/snapshots/screens__opening_not_on_path__80x24__no_colour_ascii.snap
---
source: crates/zenith/tests/screens.rs
expression: screen(&buffer)
---
                                   *   *                            .

       '
         **        ..##  ##..      ZENITH
 +   '.          .#####  #####.    The terminal of Constellation
  .             .##############.   NIPS-CERN
                ################   0.1.0                                '    *
                                                                   .
'                                                                       +
                             Not connected to SOLAR

    +----------------------------------------------------------------------+
    | ZENITH could not find solar on the PATH, which has 23 directories.   |
    | Put the folder that holds solar on the PATH, SOLAR's target/release  |
    | when it was built from source, or give the path with --solar <path>  |
    | or the variable ZENITH_SOLAR.                                        |
*   |                                                                      |
    | r try again   Enter go to the tabs   q quit                          |
    +----------------------------------------------------------------------+


                       +                                           +
       *            +          +
                                 *        *.   '
--- every cell not listed is - on -
 0: 39-39  - on - dim
 0: 68-68  - on - dim
 2:  7-7   - on - dim
 3: 10-10  - on - dim
 3: 35-40  - on - bold
 4:  1-1   - on - dim
 4:  5-5   - on - dim
 7: 67-67  - on - dim
 8:  0-0   - on - dim
 9: 29-50  - on - bold
11:  4-75  - on - dim
12:  4-4   - on - dim
12:  6-71  - on - bold
12: 75-75  - on - dim
13:  4-4   - on - dim
13: 75-75  - on - dim
14:  4-4   - on - dim
14: 75-75  - on - dim
15:  4-4   - on - dim
15: 75-75  - on - dim
16:  4-4   - on - dim
16: 75-75  - on - dim
17:  4-4   - on - dim
17:  6-6   - on - bold
17: 20-24  - on - bold
17: 43-43  - on - bold
17: 75-75  - on - dim
18:  4-75  - on - dim
21: 23-23  - on - dim
21: 67-67  - on - dim
22:  7-7   - on - dim
22: 20-20  - on - dim
22: 31-31  - on - dim
23: 33-33  - on - dim
23: 43-43  - on - dim
23: 47-47  - on - dim
